--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <groupId>com.google.googlejavaformat</groupId>
   <artifactId>google-java-format-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.7-appdetex-SNAPSHOT</version>
+  <version>1.7-appdetex</version>
 
   <modules>
     <module>core</module>
